WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240203
[macOS] REGRESSION (
r293825
): Find highlight snapshots are incorrectly scaled
https://bugs.webkit.org/show_bug.cgi?id=240203
Summary
[macOS] REGRESSION (r293825): Find highlight snapshots are incorrectly scaled
Said Abou-Hallawa
Reported
2022-05-07 01:07:15 PDT
takeSnapshots() depends on the snapshot ImageBuffer::resolutionScale() to set the size of the TextIndicatorData image.
r293825
scaled the size of the ImageBuffer before creation and moved the scaling to the GraphicsContext. So we have correct scaled pixels but the resolutionScale is 1. So we get enlarged incorrect image.
Attachments
Patch
(12.40 KB, patch)
2022-05-07 01:28 PDT
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
Patch
(5.54 KB, patch)
2022-05-08 19:44 PDT
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2022-05-07 01:07:41 PDT
rdar://92892014
Said Abou-Hallawa
Comment 2
2022-05-07 01:28:25 PDT
Created
attachment 458994
[details]
Patch
Said Abou-Hallawa
Comment 3
2022-05-08 19:44:08 PDT
Created
attachment 459020
[details]
Patch
EWS
Comment 4
2022-05-08 23:29:46 PDT
Committed
r293968
(
250406@main
): <
https://commits.webkit.org/250406@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 459020
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug